--- a/css/base.css
+++ b/css/base.css
@@ -137,8 +137,7 @@ body:not(.nav) #nav {
 		overflow: hidden;
 		}
 	#globalMenu a:hover {
-	  background-color: #333;
-	  color: #fff;
+		border-bottom: solid 3px #FF9900;
 	}
 	#globalMenu a::after {
 	  top: -100%;
@@ -147,8 +146,52 @@ body:not(.nav) #nav {
 	}
 	#globalMenu a:hover::after {
 	  top: 0;
-	  background-color: #333;
+　　　border-bottom: solid 3px #FF9900;
     }
+#subject{
+	background: #223a70;
+	color: #fff;
+	fill:#fff;
+	}
+	#subject .headline{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		}
+	#subject .tabMenu{
+		position: relative;
+		margin-top: 0;
+		padding: 0 1em;
+		}
+		#subject .tabMenu li{
+			align-items: stretch;
+			padding: 0;
+			background: #223a70;
+			}
+			#subject .tabMenu li:before{
+				background: #fff;
+				pointer-events: none;
+				}
+		#subject .tabMenu a{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			min-height: 3em;
+			padding: 0.5em 1em;
+			padding-left: 2em;
+			color: #fff;
+			font-weight: bold;
+			text-decoration: none;
+			}
+		#subject .tabMenu .select{
+			background: #fff;
+			pointer-events: none;
+			}
+			#subject .tabMenu .select a{
+				color: #1a1a1a;
+				}
 #selectLanguage{
 	margin-top: 1em;
 	background: #fff;
